[package]
name = "mah_ts_identity"
version = "1.0.0"
authors = ["Splamy <splamyn@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
base64 = "0.13"
byteorder = "1"
flakebi-ring = "0.16.15"
rayon = "1"
clap = { version = "3", default-features = false, features = ["derive", "std"] }
sha-1 = "0.10"
tsproto = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib" }
